--- a/rebar.cabal
+++ b/rebar.cabal
@@ -22,10 +22,14 @@ library
 
   build-depends:
     Decimal,
-    base >=4.13 && <4.14,
+    base,
+    bimap,
     containers,
+    data-default,
     lens,
+    mtl,
     random,
     reflex >= 0.8 && < 0.9,
     reflex-dom-core >= 0.6 && < 0.7,
+    reflex-dom-contrib,
     text
